CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/" ${CMAKE_MODULE_PATH})

PROJECT(DatabaseInterface)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build." FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(MSVC)
	#Set our default locations for zlib/mysql based on x86/x64
	IF(CMAKE_CL_64)
		SET(MYSQL_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/mysql_x64")
	ELSE(CMAKE_CL_64)
		SET(MYSQL_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/mysql_x86")
	ENDIF(CMAKE_CL_64)

	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

	#We want to compile /MT not /MD so we change that
	FOREACH(flag_var CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_RELEASE CMAKE_CXX_FLAGS_RELWITHDEBINFO CMAKE_C_FLAGS_DEBUG CMAKE_C_FLAGS_MINSIZEREL CMAKE_C_FLAGS_RELEASE CMAKE_C_FLAGS_RELWITHDEBINFO)
		IF(${flag_var} MATCHES "/MD")
			STRING(REGEX REPLACE "/MD" "/MT" ${flag_var} "${${flag_var}}")
		ENDIF(${flag_var} MATCHES "/MD")
	ENDFOREACH(flag_var)
ELSE(MSVC)
	ADD_DEFINITIONS(-std=c++0x)
ENDIF(MSVC)

FIND_PACKAGE(MySQL)
FIND_PACKAGE(PostgreSQL)
OPTION(DBI_USE_SQLITE "Enable the SQLite engine." ON)

ADD_SUBDIRECTORY(dbi)

IF(MySQL_FOUND)
	ADD_SUBDIRECTORY(test-mysql)
ENDIF(MySQL_FOUND)

IF(PostgreSQL_FOUND)
	ADD_SUBDIRECTORY(test-posgresql)
ENDIF(PostgreSQL_FOUND)

IF(DBI_USE_SQLITE)
	ADD_SUBDIRECTORY(test-sqlite)
ENDIF(DBI_USE_SQLITE)
